fix(security): refine CORS configuration for wildcard origins
Adjust CORS policy to conditionally disable credentials when using
wildcard origin patterns, preventing potential security conflicts.
Additionally, simplify allowed headers by using a wildcard pattern.